# androidFun

./: README.md
NDKExample/: settings.gradle
NDKExample/app/: CMakeLists.txt  build.gradle
NDKExample/app/src/androidTest/java/com/jkim838/ndkexample/: ExampleInstrumentedTest.java
NDKExample/app/src/main/: AndroidManifest.xml
NDKExample/app/src/main/cpp/: native-lib.cpp  native-lib.h
NDKExample/app/src/main/java/com/jkim838/ndkexample/: MainActivity.java
NDKExample/app/src/main/res/layout/: activity_main.xml
NDKExample/app/src/main/res/values/: strings.xml
NDKExample/app/src/test/java/com/jkim838/ndkexample/: ExampleUnitTest.java
NDKExample/gradle/wrapper/: gradle-wrapper.properties
WiFiManager/: settings.gradle
WiFiManager/app/: build.gradle
WiFiManager/app/src/main/: AndroidManifest.xml
WiFiManager/app/src/main/res/layout/: activity_main.xml
WiFiManager/app/src/main/res/values/: strings.xml
WiFiManager/gradle/wrapper/: gradle-wrapper.properties
appTOapp/: settings.gradle
appTOapp/app/: build.gradle
appTOapp/app/src/main/: AndroidManifest.xml
appTOapp/app/src/main/res/layout/: activity_main.xml
appTOapp/gradle/wrapper/: gradle-wrapper.properties
appTOapp_server/: settings.gradle
appTOapp_server/app/: build.gradle
appTOapp_server/app/src/main/: AndroidManifest.xml
appTOapp_server/gradle/wrapper/: gradle-wrapper.properties
bluetoothToaster/: settings.gradle
bluetoothToaster/app/: build.gradle
bluetoothToaster/app/src/main/: AndroidManifest.xml
bluetoothToaster/gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
